--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 		<div class="section-bg-box">
 			<h1 class="animated slideInLeft">Save Ukraine</h1>
 			<h2 class="animated slideInRight">Save a Life</h2>
+			    <div id="donate-button-container">
+      <div id="donate-button"></div>
+      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
+      <script>
+      PayPal.Donation.Button({
+      env:'production',
+      hosted_button_id:'4J7PXR6WAMBHS',
+      image: {
+      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
+      alt:'Donate with PayPal button',
+      title:'PayPal - The safer, easier way to pay online!',
+      }
+      }).render('#donate-button');
+      </script>
+      </div>
+ 
 		</div>
 	</div>
 		    <div id="donate-button-container">
