--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="HOSPITAL,HOSPITAL.COM,HOSPITAL WEBSITE, MEDICAN">
 	<meta name="description" content="Help ukraine">
 	<meta name="author" content="fundraising.com">
-	<title>hospital.com</title>
+	<title>saveukraine.com</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
