--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<h2 class="animated flash">
 				<i class="fa fa-hospital"></i>&nbsp;
 				Savealife</h2>
-			</a>
+			 
 			    <div id="donate-button-container">
       <div id="donate-button"></div>
       <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
@@ -36,7 +36,7 @@
       }
       }).render('#donate-button');
       </script>
-      </div>
+			</div> </a>
  
 		</div>
 		<!-- End Brand name coding-->
@@ -76,7 +76,7 @@
       }).render('#donate-button');
       </script>
       </div>
- 
+		</div>
 		</div>
 	</div>
 		    
