--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
 		</div>
 		</div>
 	</div>
-		    
+	 <div id="donate-button-container">
+      <div id="donate-button"></div>
+      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
+      <script>
+      PayPal.Donation.Button({
+      env:'production',
+      hosted_button_id:'4J7PXR6WAMBHS',
+      image: {
+      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
+      alt:'Donate with PayPal button',
+      title:'PayPal - The safer, easier way to pay online!',
+      }
+      }).render('#donate-button');
+      </script>
+      </div>	    
       
  
 	<!-- text decoration coding - ->
