--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
 	<div class="w-80" style="padding: 0;">
 	<div class="section-img">
 		<div class="section-bg-box">
+			 <div id="donate-button-container">
+      <div id="donate-button"></div>
+      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
+      <script>
+      PayPal.Donation.Button({
+      env:'production',
+      hosted_button_id:'4J7PXR6WAMBHS',
+      image: {
+      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
+      alt:'Donate with PayPal button',
+      title:'PayPal - The safer, easier way to pay online!',
+      }
+      }).render('#donate-button');
+      </script>
+      </div>	
 			<h1 class="animated slideInLeft">Save Ukraine</h1>
 			<h2 class="animated slideInRight">Save a Life</h2>
 			    <div id="donate-button-container">
