--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       }).render('#donate-button');
       </script>
       </div>> </a>
- 		<a href=" <div id="donate-button-container">
+ 		<a  href=" "><div id="donate-button-container">
       <div id="donate-button"></div>
       <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
       <script>
@@ -232,7 +232,7 @@
       }
       }).render('#donate-button');
       </script>
-      </div>"> </a>
+      </div> </a>
  		<a href="#"> </a>
  	</div>
  	<div class="footer-box">
