--- a/index.html
+++ b/index.html
@@ -18,53 +18,40 @@
 		<!-- Start Brand name coding-->
 		<div class="brand-name">
 			<a href="index.html">
-				 <div id="donate-button-container">
-      <div id="donate-button"></div>
-      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
-      <script>
-      PayPal.Donation.Button({
-      env:'production',
-      hosted_button_id:'4J7PXR6WAMBHS',
-      image: {
-      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
-      alt:'Donate with PayPal button',
-      title:'PayPal - The safer, easier way to pay online!',
-      }
-      }).render('#donate-button');
-      </script>
-      </div>
+				 
 				<h2 class="animated flash">
 				<i class="fa fa-hospital"></i>&nbsp;
 				Savealife</h2>
 			 
-			    <div id="donate-button-container">
-      <div id="donate-button"></div>
-      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
-      <script>
-      PayPal.Donation.Button({
-      env:'production',
-      hosted_button_id:'4J7PXR6WAMBHS',
-      image: {
-      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
-      alt:'Donate with PayPal button',
-      title:'PayPal - The safer, easier way to pay online!',
-      }
-      }).render('#donate-button');
-      </script>
-			</div> </a>
+			    </a>
  
 		</div>
 		<!-- End Brand name coding-->
 		<!-- Start Nav coding & menu coding -->
          <nav>
-        <!-- 	<ul>
-         		<li><a href="index.html">Home</a></li>
+        	<ul>  <li><a href="
+    <div id="donate-button-container">
+      <div id="donate-button"></div>
+      <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
+      <script>
+      PayPal.Donation.Button({
+      env:'production',
+      hosted_button_id:'4J7PXR6WAMBHS',
+      image: {
+      src:'https://www.paypalobjects.com/en_US/PL/i/btn/btn_donateCC_LG.gif',
+      alt:'Donate with PayPal button',
+      title:'PayPal - The safer, easier way to pay online!',
+      }
+      }).render('#donate-button');
+      </script> ">Home</a></li>
+			</div>
+         		<!-- <li><a href="index.html">Home</a></li>
          		<li><a href="gallery.html">Gallery</a></li>
          		<li><a href="register.html">Register</a></li>
          		<li><a href="login.html">Login</a></li>
          		<li><a href="contact.html">Contact Us</a></li>
-         	</ul> -->
-         </nav>
+	 --> </ul>
+>         </nav>
 		<!-- End Nav coding & menu coding -->
 	</div>
 </header>
